--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     ]
   },
   "devDependencies": {
+    "primeflex": "^3.1.3",
     "primeicons": "^5.0.0",
     "primereact": "^7.2.1",
     "sass": "^1.49.9"
